PP-13030: Return users by role
Add a `role` query parameter to `GET
/v1/api/services/{serviceExternalId}/users` so users with specific roles can be
returned.
